RESOLVED FIXED30677
Missing UnusedParam.h include when INSPECTOR is not enabled
https://bugs.webkit.org/show_bug.cgi?id=30677
Summary Missing UnusedParam.h include when INSPECTOR is not enabled
Steve Block
Reported 2009-10-22 09:07:45 PDT
WebCore/page/Console.cpp and WebCore/workers/WorkerContext.cpp both use the UNUSED_PARAM macro but do not include UnusedParam.h. The macro is only used when INSPECTOR is not enabled, so the build succeeds when INSPECTOR is enabled.
Attachments
Patch 1 for Bug 30677 (1.41 KB, patch)
2009-10-22 09:39 PDT, Steve Block
eric: review+
benm: commit-queue-
Steve Block
Comment 1 2009-10-22 09:39:24 PDT
Eric Seidel (no email)
Comment 2 2009-10-22 10:40:21 PDT
Comment on attachment 41663 [details] Patch 1 for Bug 30677 OK, looks OK.
WebKit Commit Bot
Comment 3 2009-10-23 02:57:33 PDT
Comment on attachment 41663 [details] Patch 1 for Bug 30677 Rejecting patch 41663 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1']" exit_code: 1 Running build-dumprendertree Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 11506 test cases. fast/media/mq-transform-02.html -> failed Exiting early after 1 failures. 7441 tests run. 135.60s total testing time 7440 test cases (99%) succeeded 1 test case (<1%) had incorrect layout 3 test cases (<1%) had stderr output
Ben Murdoch
Comment 4 2009-10-23 03:06:20 PDT
Will land manually, looks like https://bugs.webkit.org/show_bug.cgi?id=30700 caused the cq to fail.
Ben Murdoch
Comment 5 2009-10-23 05:56:22 PDT
Landed as r49976.
Eric Seidel (no email)
Comment 6 2009-10-23 12:03:30 PDT
Comment on attachment 41663 [details] Patch 1 for Bug 30677 Sorry about the commit-queue trouble. Should work fine now.
Steve Block
Comment 7 2009-10-23 12:09:36 PDT
benm@google.com has already landed this by hand.
Note You need to log in before you can comment on or make changes to this bug.